--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -4,7 +4,7 @@
 	repository:bitcoin:sourceforge,
 	author = {},
 	title = {Original bitcoin repository with the genisis block function},
-	year = 2009-,
+	year = 2009,
 	howpublished = {
 		\url{https://sourceforge.net/p/bitcoin/code/133/tree/trunk/main.cpp#l1673}},
 	note = {The source forge repostiory was later moved to github.},
@@ -77,13 +77,13 @@
 	month = {June},
 	year = {1870},
 	note = { },
-	journal =  Journal of the Statistical Society of London,
+	journal =  "Journal of the Statistical Society of London",
 	volume = {33},
-	number = 2,
-	year = 1892,
+	number = "2",
+	year = "1892",
 	howpublished = {\url{https://www.jstor.org/stable/2338715?read-now=1&seq=1#page_scan_tab_contents}},
 	pages = {216-242},
-	DOI = 10.2307/2338715
+	DOI = "10.2307/2338715"
 }
 
 @book{
@@ -92,7 +92,7 @@
 	title = {Gold Wars 
 	The Battle Against Sound Money 
 	As Seen From A Swiss Perspective},
-	year = 2001,
+	year = "2001",
 	publisher = {The Foundation for the Advancement of 
 	Monetary Education },
 	howpublished = {
@@ -102,9 +102,9 @@
 
 @misc{
 	world:gold:council,
-	author = {},
-	year = 2019,
-	title = {The World Gold Council},
+	author = "",
+	year = "2019",
+	title = "The World Gold Council",
 	howpublished = {
 		\url{https://gold.org}
 	}
@@ -114,9 +114,9 @@
     ammous:bitcoin:standard,
 	author = {Ammous. Saifeadean},
 	title = {The Bitcoin Standard},
-	year = 2018,
-	month = mars,
-	day = 23,
+	year = "2018",
+	month = "mars",
+	day = "23",
 	publisher = { Wiley },
 }
 
@@ -125,7 +125,6 @@
 	title = {Functions of Money},
 	author = {Federal Reserve Bank of Saint Louis},
 	year = "",
-	%	volume = "1",
 	howpublished = {
 	\url{https://www.stlouisfed.org/education/economic-lowdown-podcast-series/episode-9-functions-of-money}
 	},
@@ -158,9 +157,9 @@
 @misc{
 	hanke:hyperinflation,
 	author={Hanke, Steve H.},
-	title={Venezuela Hyperinflation}
+	title={Venezuela Hyperinflation},
 	howpublished = {
-	\url{https://www.forbes.com/sites/stevehanke/2018/10/23/venezuelas-hyperinflation-24-months-and-counting/#778fc64a162d}
+		\url{https://www.forbes.com/sites/stevehanke/2018/10/23/venezuelas-hyperinflation-24-months-and-counting/#778fc64a162d}
 	},	
 }
 
@@ -199,10 +198,10 @@
 @article{
 	bordo:bretton:woods,
 	title={The imbalances of the Bretton Woods system 1965 to 1973: U.S. Inflation, the elephants in the room},
-	author={Bordo, Michael D.}
+	author={Bordo, Michael D.},
 	publisher={National bureau of economic research 1050 massachusetts avenue, cambridge, MA 02138, December 2018},
 	howpublished = {
-	\url{http://papers.nber.org/tmp/42782-w25409.pdf}
+		\url{http://papers.nber.org/tmp/42782-w25409.pdf}
 	}
 }
 
@@ -338,7 +337,7 @@ TOR, reverse govern-print mention
 @misc{repository:bitcoin,
 	author = {},
 	title = {Bitcoin Reference Implementation},
-	year = 2009-,
+	year = "2009-",
 	howpublished = {
 	\url{https://github.com/bitcoin/bitcoin}},
 	note = {},
@@ -439,7 +438,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0112:sequence:lock:time:soft:fork,
 	author = {BtcDrak and Freienbach, Mark and Lombrozo, Eric},
-	title = "BIP 0112 CHECKSEQUENCEVERIFY"
+	title = "BIP 0112 CHECKSEQUENCEVERIFY",
 	year = "2015",
 	month = "august",
 	day = "10",
@@ -450,7 +449,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0113:median:time:passed,
 	author = {Kerin, Thomas	and Freienbach, Mark},
-	title = "BIP 0113 Median time-past as endpoint for lock-time calculations"
+	title = "BIP 0113 Median time-past as endpoint for lock-time calculations",
 	year = "2015",
 	month = "august",
 	day = "10",
@@ -461,7 +460,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0032:hd:wallet,
 	author = { Wuille, Pieter },
-	title = "BIP 0032 Hierarchical Deterministic Wallets"
+	title = "BIP 0032 Hierarchical Deterministic Wallets",
 	year = "2012",
 	month = "February",
 	day = "11",
@@ -472,7 +471,7 @@ TOR, reverse govern-print mention
 
 @misc{bip,
 	author = {},
-	title = {Bitcoin improvement proposals },
+	title = { Bitcoin improvement proposals },
 	year = "",
 	howpublished = {
 	\url{https://github.com/bitcoin/bips}},
@@ -485,7 +484,7 @@ TOR, reverse govern-print mention
 	author = { Garzik, Jeff and
 	Harding, Tom and
 	Valberg Johannsson, Dagur},
-	title = "BIP 0100 Dynamic maximum block size by miner vote"
+	title = "BIP 0100 Dynamic maximum block size by miner vote",
 	year = "2015",
 	month = "august",
 	day = "10",
@@ -507,7 +506,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0102:increase:2mb,
 	author = { Garzik, Jeff},
-	title = "BIP 0102 Block size increase to 2MB"
+	title = "BIP 0102 Block size increase to 2MB",
 	year = "2015",
 	month = "June",
 	day = "23",
@@ -518,7 +517,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0103:increase:with:technology,
 	author = { Wuille, Pieter },
-	title = "BIP 0103 Block size following technological growth"
+	title = "BIP 0103 Block size following technological growth",
 	year = "2015",
 	month = "June",
 	day = "23",
@@ -696,7 +695,7 @@ year = "",
 }
 
 @article{
-	freeman:betweenness centrality,
+	freeman:betweenness:centrality,
 	author = { Freeman, Linton C. },
 	title = "A Set of Measures of Centrality Based on Betweenness",
 	journal = "Sociometry",
