--- a/docs/thesis/routing_fee.tex
+++ b/docs/thesis/routing_fee.tex
@@ -1,4 +1,4 @@
-\chapter{Routing Fee Protocol Proposal}
+\chapter*{Routing Fee Protocol Proposal}
 
 Although there is methods to balance channels it would be beneficial if the fee could reflect the state in which the channel is left.
 
@@ -43,9 +43,9 @@ From the cost function the fee may be retrieved by calculating the area under th
 
 The fees for $P_1$, $P_2$ would be very different with this brackets method.
 
-\[ F_{P_1} = F_{B} + \int_{B_1}^{B_2} f(x) dx = F_B + 13,502,153,930 μS \]
+\[ F_{P_1} = F_{B} + \int_{B_1}^{B_2} f(x) dx = F_B + 13,502,153,930 \mu S \] 
 
-\[ F_{P_2} = F_{B} + \int_{B_3}^{B_4} f(x) dx  = F_B + 88,984,850,361 μS \]
+\[ F_{P_2} = F_{B} + \int_{B_3}^{B_4} f(x) dx  = F_B + 88,984,850,361 \mu S \]
  
 Here the fees are much larger for the payment that unbalances the channel than the payment that balances it. 
 
