--- a/docs/thesis/routing_fee.tex
+++ b/docs/thesis/routing_fee.tex
@@ -1,13 +1,12 @@
-\chapter*{Routing Fee Protocol Proposal}
+\chapter{Routing Fee Protocol Proposal}
 
-Although there is methods to balance channels it would be beneficial if the fee could reflect the state in which the channel is left.
+Although there are methods to balance channels it would be beneficial if the fee could reflect the state in which the channel is left.
 
 Currently the fee is only proportional to the liquidity used, not the state of the channel.
 
 Suppose there exists a channel between Alice and Bob with 10 million satoshis in it. 
-Two payments, $P_{1}$ and $P_{2}$ is routed through the channel from Bob to Alice.
-Both use the same amount of liquidity 3,500,000 satoshis each, but the they start from
-two different channel positions $B_{1}$ and $B_2$.
+Two payments, $P_{1}$ and $P_{2}$ are routed through the channel from Bob to Alice.
+Both use the same amount of liquidity, 3,500,000 satoshis each, but they start from two different initial states $B_{1}$ and $B_3$.
 
 \begin{figure}[!htb]
 	\hspace*{-0.7cm} 
@@ -22,11 +21,11 @@ The two payments would incur the same fee,
 
 \[ F_{P_1 P_2} = F_B + (3,500,000 * F_R / 1,000,000) \]
 
-but leaves the channels in completely different states. $P_1$ at $B_2$ and $P_2$ at $B_4$. It is of course possible to reset the channel price after $P_1$ to
+but leave the channels in completely different states. $P_1$ at $B_2$ and $P_2$ at $B_4$. It is of course possible to reset the channel price after $P_1$ to
 be more expensive, but suppose a third larger payment $P_3$ going from $B_1$ to $B_4$ would still run into this problem.
 
 It is possible to limit the maximum allowed payment, to say 1/5 of the total channel capacity, so a fee could be broadcast between payments. However 
-that would reduce to possible transacting parties in the network, limiting connectivity.
+that would reduce possible transacting parties in the network, limiting connectivity.
 
 If the price structure was a scheme of brackets instead, where the cost depend on the channel position, these issues may be resolved. 
 Each satoshi in the channel may be seen as a different bracket, with a different price for each satoshi moved. The channels would then broadcast a cost function instead of the fixed fee.
@@ -51,7 +50,7 @@ Here the fees are much larger for the payment that unbalances the channel than t
 
 Brackets would incentivize payments to route in such a way to keep channels balanced which may lead to higher throughput. %I will most likely do a few simulations later this spring to validate this methods affect on the network.
 
-This method has clearly some headaches accompanying it. It may be unnecessarily complex and would requires deterministic ways to calculate integrals over multiple systems. There might be better ways to solve this problem and there might be problems with this approach I'm unaware of. Anyway, some small tweaks in the protocol may lead to a much healthier network which may be worthy of exploration.\\
+This method clearly has some headaches accompanying it. It may be unnecessarily complex and would requires deterministic ways to calculate integrals over multiple systems. There might be better ways to solve this problem and there might be problems with this approach I'm unaware of. Anyway, some small tweaks in the protocol may lead to a much healthier network which may be worthy of exploration.\\
 
 \textbf{John-John Markstedt}
 
