--- a/docs/thesis/macroeconomics.tex
+++ b/docs/thesis/macroeconomics.tex
@@ -146,13 +146,13 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 
 \subsection{Hyperinflation}
 
-The major currencies seen in figure \ref{fig:gold:price:major:currency} is very far from worst in their ability to hold value. Fiat currencies are highly dependent on it's authority and their willingness to increase the money supply and history supplies us with some catastrophes as seen in table \ref{tab:inflation}.
+The major currencies seen in figure \ref{fig:gold:price:major:currency} are very far from worst in their ability to hold value. Fiat currencies are highly dependent on it's authority and their willingness to increase the money supply and history supplies us with some catastrophes as seen in table \ref{tab:inflation}.
 
-During the last 250 years hyperinflation\footnote{There is no official definition of what constitutes hyper inflation but a rule of thumb seem to be over 50\% annual inflation.} have occured at least 54 times\cite{hanke:krus:hyperinflation:table}\cite{hanke:hyperinflation}. Many countries going through multiple inflationary periods, e.g. China 43-45, 47-49 and Georgia 92, 93-94. Hyperinflation devastates all savings and effectually letting savings subsidize the newly printed currency. The inflation narrows the time horizon of trade, since capital will go worthless in a short while, making it very difficult to formalize any long term investment or running a normal economy. 
+During the last 250 years hyperinflation\footnote{There is no official definition of what constitutes hyper inflation but a rule of thumb seem to be over 50\% annual inflation.} has occured at least 54 times\cite{hanke:krus:hyperinflation:table}\cite{hanke:hyperinflation}. Many countries going through multiple inflationary periods, e.g. China 43-45, 47-49 and Georgia 92, 93-94. Hyperinflation devastates all savings and effectually letting savings subsidize the newly printed currency. The inflation narrows the time horizon of trade, since capital will go worthless in a short while, making it very difficult to formalize any long term investment or running a normal economy. 
 
 \section{Trust}
 
-The economic system built upon fiat currencies are based on the trust in the issuing body not to increase the money supply excessively. It's almost been common knowledge that value is lost in currencies, moving money away from currency and bonds into stock and real estate. Modern currencies have been decoupled from the underlying reasons of its nascence, leading up to the failures of 08 coinciding with Nakamoto's publication completing full circle.
+The economic system built upon fiat currencies is based on the trust in the issuing body not to increase the money supply excessively. It's almost been common knowledge that value is lost in currencies, moving money away from currency and bonds into stock and real estate. Modern currencies have been decoupled from the underlying reasons of its nascence, leading up to the failures of 08 coinciding with Nakamoto's publication completing full circle.
 
 \newpage
 \noindent
