--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -22,13 +22,13 @@ This thesis aim to address following three questions:
 \section{Related work}
     \label{sec:related_work}
 
-	Little to nothing in the literature that addresses the Lightning Network Routing Policies has been found. Rene Pickard have made some early attempts to find suitable channel parties with traditional graph heuristics but is yet incomplete and unpublished[How source to unpublished?]. Further conversation with people in the community confirms that this problem set is known yet largely unexplored.
+	Little to nothing in the literature that addresses the Lightning Network Routing Policies has been found. Rene Pickard has made some early attempts to find suitable channel parties with traditional graph heuristics but is yet incomplete and unpublished[How source to unpublished?]. Further conversation with people in the community confirms that this problem set is known yet largely unexplored.
 	
 	The actual routing in LN has been researched[source] and implemented[source]. Further efficient sharing of routing tables have been proposed\cite{gunspan:marco:ant}.
 	
 	A similar problem at first glance, the estimation of the on-chain Bitcoin Network Fee has been covered extensively. However it's not applicable, nor is it even similar as a problem set. The Bitcoin Fee problem is far simpler as the competing transaction fees(mem-pool) are known at all times and estimating a fee too low can be corrected by \textit{fee bumping}\footnote{Broadcasting a new transaction spending the same UTXO with a higher fee.} or \textit{child-pay-for-parent}\footnote{Using the unconfirmed parent UTXO in a new transaction, a miner must include the parent tx to be able to mine the child tx and receive the child tx fee.} implementations.
 	
-	As the Lightning Network is indeed a network and many problems is yet another incarnation of already solved graph problems. A nodes position in a network has been studied and specifically the measurement of Betweenness Centrality, as introduced by Freeman in 1977\cite{brandes:betweenness:centrality:algorithm}, lays a sound basis for this thesis. Calculating paths in graphs is as old as the computing field itself with Floyd-Warshall, Johnson\cite{johnson:shortest:path:sparse:network} and Dijkstras algorithms all being appropriate here. The attributes of the network as policies emerges have consequences on throughput and robustness have also been extensively researched in the field of topology. Especially that of scale free networks by Barabasi and Albert\cite{barabasi:albert:emergent:scaling} is of concern in here.
+	As the Lightning Network is indeed a network and many problems are yet another incarnation of already solved graph problems. A nodes position in a network has been studied and specifically the measurement of Betweenness Centrality, as introduced by Freeman in 1977\cite{brandes:betweenness:centrality:algorithm}, lays a sound basis for this thesis. Calculating paths in graphs is as old as the computing field itself with Floyd-Warshall, Johnson\cite{johnson:shortest:path:sparse:network} and Dijkstras algorithms all being appropriate here. The attributes of the network as policies emerges have consequences on throughput and robustness have also been extensively researched in the field of topology. Especially that of scale free networks by Barabasi and Albert\cite{barabasi:albert:emergent:scaling} is of concern in here.
 	
 	Emergence of equilibria as the product of policies of competing actors is neither new or rare in the fields of Evolutionary Biology and Economics. Ideas as the Standard Price Theory, Evolutionary Stable Strategies and more widely Game Theory has aided in the formulation of the thesis and construction of the simulations.
 	
@@ -40,7 +40,7 @@ This thesis aim to address following three questions:
 	
 \section{Structure}
 
-This thesis is divided into 8 chapters, including this one. The first four chapters gives a wide overview of Bitcoin, the Lightning Network. Chapters 6 and 7 aims to answer the thesis question by formulating, evaluating and simulating routing policies. The last chapter 8 discusses the result and conclusions are drawn and elaborating on future work.
+This thesis is divided into 8 chapters, including this one. The first four chapters gives a wide overview of Bitcoin and the Lightning Network. Chapters 6 and 7 aims to answer the thesis question by formulating, evaluating and simulating routing policies. The last chapter 8 discusses the result and conclusions are drawn and elaborating on future work.
 
 \begin{enumerate}
 	\item \textbf{Introduction} introduces the thesis.
