--- a/docs/thesis/problem.tex
+++ b/docs/thesis/problem.tex
@@ -13,7 +13,7 @@ This thesis aim to address following three questions:
     \begin{enumerate}
 	\item What is the fair discount for a transaction that balances the channel, as
 		opposed to an unbalancing one?
-	\item When should a new channel be opened, and what node should the new
+	\item When should a new channel be opened, and which node should the new
 		channel connect to in order to incentivize routing through the node?
 	\item When should a manual rebalancing of the channels occur, as opposed to
 		incentivized rebalancing using discounts?
